--- a/src/components/timer/index.css
+++ b/src/components/timer/index.css
@@ -2,3 +2,10 @@
   width: 100px;
   margin-right: 30px;
 }
+
+.btn {
+  display: inline-block;
+  padding: 5px 10px;
+  cursor: pointer;
+  user-select: none;
+}
